# verbgen-whisper-rs

./: Cargo.toml
examples/: basic_use.rs
examples/streaming/: Cargo.toml
examples/streaming/src/: main.rs
src/: standalone.rs  utilities.rs
